--- a/code/DEL_hanabi_toy.ipynb
+++ b/code/DEL_hanabi_toy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,17 +101,28 @@
     "        given the start situation, every possible world from all\n",
     "        player's point of views are created and stored\n",
     "        \"\"\"\n",
+    "        # getting rid of old worlds \n",
+    "        self.possible_worlds.clear()\n",
     "        \n",
     "        copy_real_world = cp.deepcopy(real_world)\n",
     "        self.possible_worlds.add(copy_real_world)\n",
-    "        copy_pile = original_pile\n",
-    "        if self.name is \"player1\":\n",
-    "            copy_pile.remove(real_world.player2_hand[0])\n",
-    "        if self.name is \"player2\":\n",
-    "            copy_pile.remove(real_world.player1_hand[0])\n",
-    "\n",
+    "        copy_pile = cp.deepcopy(original_pile)\n",
+    "            \n",
+    "        if self.name is \"player1\" and real_world.player2_hand:\n",
+    "            # excluding cards that the player can see on the other player's hand\n",
+    "            for card in real_world.player2_hand:\n",
+    "                copy_pile.remove(card)\n",
+    "        #print(real_world.player1_hand)\n",
+    "        if self.name is \"player2\" and real_world.player1_hand:\n",
+    "            # excluding cards that the player can see on the other player's hand\n",
+    "            for cards in real_world.player1_hand:\n",
+    "                copy_pile.remove(cards)\n",
+    "        \n",
+    "        # creating all possible worlds\n",
     "        for i, card in enumerate(copy_pile):\n",
     "            world = World()\n",
+    "            world.blitz = real_world.blitz\n",
+    "            world.on_table = real_world.on_table\n",
     "            if self.name is \"player1\":\n",
     "                world.player2_hand.append(real_world.player2_hand[0])\n",
     "                world.player1_hand.append(card)\n",
@@ -119,7 +130,8 @@
     "                world.player1_hand.append(real_world.player1_hand[0])\n",
     "                world.player2_hand.append(card)\n",
     "\n",
-    "            self.possible_worlds.add(world)"
+    "            self.possible_worlds.add(world)\n",
+    "    "
    ]
   },
   {
@@ -131,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,12 +160,19 @@
     "    or player 2\n",
     "    \"\"\"\n",
     "    random_index = rd.randint(0,len(pile) - 1)\n",
+    "    drawn_card = pile.pop(random_index)\n",
     "\n",
     "    if player.name is \"player1\":\n",
-    "        real_world.player1_hand.append(pile.pop(random_index))\n",
+    "        real_world.player1_hand.append(drawn_card)\n",
+    "        \n",
+    "        for w in player2.possible_worlds:\n",
+    "            w.player1_hand.append(drawn_card)\n",
     "\n",
     "    if player.name is \"player2\":\n",
-    "        real_world.player2_hand.append(pile.pop(random_index))\n",
+    "        real_world.player2_hand.append(drawn_card)\n",
+    "        \n",
+    "        for w in player1.possible_worlds:\n",
+    "            w.player2_hand.append(drawn_card)\n",
     "\n",
     "def play_card(player):\n",
     "\n",
@@ -161,7 +180,7 @@
     "        played_card = real_world.player1_hand.pop()\n",
     "    if player.name is \"player2\":\n",
     "        played_card = real_world.player2_hand.pop()\n",
-    "\n",
+    "    \n",
     "    if played_card == 1:\n",
     "        real_world.on_table.append(played_card)\n",
     "    else:\n",
@@ -207,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -217,34 +236,20 @@
       "\n",
       "------------------\n",
       "START OF THE GAME\n",
-      "2 players, 4 cards, 1x2, 1x3, 1x1\n",
+      "2 players, 4 cards, 3x1, 1x2, 1x3\n",
       "------------------\n",
       "ROUND 0: after drawing cards\n",
       "------------------\n",
-      "[real world] w = on table: [] p1: [1] p2: [3], blitz: 0\n",
+      "[real world] w = on table: [] p1: [1] p2: [2], blitz: 0\n",
       "------------------\n",
       "[possible worlds for player 1]\n",
-      "w = on table: [] p1: [2] p2: [3], blitz: 0\n",
-      "w = on table: [] p1: [1] p2: [3], blitz: 0\n",
-      "\n",
-      "[possible worlds for player 2]\n",
-      "w = on table: [] p1: [1] p2: [3], blitz: 0\n",
       "w = on table: [] p1: [1] p2: [2], blitz: 0\n",
-      "w = on table: [] p1: [1] p2: [1], blitz: 0\n",
-      "\n",
-      "------------------\n",
-      "ROUND 1: player 1 plays his card\n",
-      "------------------\n",
-      "[real world] w = on table: [1] p1: [] p2: [3], blitz: 0\n",
-      "------------------\n",
-      "[possible worlds for player 1]\n",
-      "w = on table: [1] p1: [] p2: [3], blitz: 0\n",
-      "w = on table: [1] p1: [] p2: [3], blitz: 0\n",
+      "w = on table: [] p1: [3] p2: [2], blitz: 0\n",
       "\n",
       "[possible worlds for player 2]\n",
-      "w = on table: [1] p1: [] p2: [3], blitz: 0\n",
-      "w = on table: [1] p1: [] p2: [2], blitz: 0\n",
-      "w = on table: [1] p1: [] p2: [1], blitz: 0\n"
+      "w = on table: [] p1: [1] p2: [2], blitz: 0\n",
+      "w = on table: [] p1: [1] p2: [3], blitz: 0\n",
+      "w = on table: [] p1: [1] p2: [1], blitz: 0\n"
      ]
     }
    ],
@@ -264,15 +269,86 @@
     "\n",
     "print(\"\\n------------------\")\n",
     "print(\"START OF THE GAME\")\n",
-    "print(\"2 players, 4 cards, 2x1, 1x2, 1x3\")\n",
+    "print(\"2 players, 4 cards, 3x1, 1x2, 1x3\")\n",
     "print(\"------------------\")\n",
     "print(\"ROUND 0: after drawing cards\")\n",
     "\n",
-    "print_game_status()\n",
-    "play_card(player1)\n",
+    "print_game_status()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Round 1: Card is played ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "------------------\n",
+      "ROUND 1: One player plays his card\n",
+      "------------------\n",
+      "[real world] w = on table: [] p1: [1] p2: [], blitz: 1\n",
+      "------------------\n",
+      "[possible worlds for player 1]\n",
+      "w = on table: [] p1: [1] p2: [], blitz: 1\n",
+      "w = on table: [] p1: [3] p2: [], blitz: 1\n",
+      "\n",
+      "[possible worlds for player 2]\n",
+      "w = on table: [] p1: [1] p2: [], blitz: 1\n",
+      "w = on table: [] p1: [1] p2: [], blitz: 1\n",
+      "w = on table: [] p1: [1] p2: [], blitz: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "play_card(player2)\n",
     "\n",
     "print(\"\\n------------------\")\n",
-    "print(\"ROUND 1: player 1 plays his card\")\n",
+    "print(\"ROUND 1: One player plays his card\")\n",
+    "print_game_status()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Afer Round 1: a card is drawn ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-366-4eb9bf3a527f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdraw_card\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplayer1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_possible_worlds\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mplayer2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_possible_worlds\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n------------------\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-362-fc5e6d85a010>\u001b[0m in \u001b[0;36mcreate_possible_worlds\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     40\u001b[0m             \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mon_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreal_world\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mon_table\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;34m\"player1\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m                 \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayer2_hand\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreal_world\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayer2_hand\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m                 \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayer1_hand\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcard\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;34m\"player2\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "draw_card(player1)\n",
+    "player1.create_possible_worlds()\n",
+    "player2.create_possible_worlds()\n",
+    "\n",
+    "print(\"\\n------------------\")\n",
+    "print(\"ROUND 1: One player plays his card\")\n",
     "print_game_status()"
    ]
   },
@@ -281,7 +357,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "play_card(player2)\n",
+    "print_game_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_card(player2)\n",
+    "print_game_status()\n",
+    "player1.create_possible_worlds()\n",
+    "player2.create_possible_worlds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "play_card(player1)\n",
+    "print_game_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_card(player1)\n",
+    "player1.create_possible_worlds()\n",
+    "player2.create_possible_worlds()\n",
+    "print_game_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "play_card(player1)"
+   ]
   }
  ],
  "metadata": {
