added to dos / theory

--- a/code/hanabi_RSA_intention_representation.ipynb
+++ b/code/hanabi_RSA_intention_representation.ipynb
@@ -55,6 +55,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### TO DO: Tracking public knowledge (28.05)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what is public knowledge?\n",
+    "# = hard knowledge\n",
+    "# stacks + discarded pile + how many cards are in the pile left + how many hint tokens there are + all hints that\n",
+    "# have been given\n",
+    "\n",
+    "# public state of intentions: \n",
+    "# for every card on the hand of the players (2 player game: 10 cards on hands) there should be a probability\n",
+    "# distribution for intention of card (prob for playable, to save, discardable), at the beginning: uniformly\n",
+    "# distributed. With every round, the intentions should get updated. This should then serve as priors for the\n",
+    "# next inention update\n",
+    "\n",
+    "# to do: write my own factor() function similar to Pyro / webPPL with numpy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Pragmatic Listener \n",
     "\n",
