minor notebook update

--- a/code/RSA_intention_Plus_Utility.ipynb
+++ b/code/RSA_intention_Plus_Utility.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "              {'action_type': 'REVEAL_COLOR', 'target_offset': 1, 'color': 'G'},\n",
     "              {'action_type': 'REVEAL_COLOR', 'target_offset': 1, 'color': 'Y'},\n",
     "              {'action_type': 'REVEAL_COLOR', 'target_offset': 1, 'color': 'W'},\n",
+    "              # TO DO: discard action is not working yet \n",
     "              {'action_type': 'DISCARD'}]\n",
     "               \n",
     "all_intentions = ['play', 'save', 'discard']\n",
