--- a/code/Bayesian update_Possible_Actions.ipynb
+++ b/code/Bayesian update_Possible_Actions.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "# Bianca's Addition: Possible Actions\n",
+    "# Bianca's Addition: Possible Actions (further down you'll find the method legal_action()!!)\n",
     "\n",
     "# from the Google Deepmind Hanabi Learning Environment:\n",
     "COLOR_CHAR = [\"R\", \"Y\", \"G\", \"W\", \"B\"] \n",
@@ -200,6 +200,60 @@
     "                                                        target_offset=offset, card_index=None))\n",
     "            \n",
     "print(possible_actions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# computing all legal actions\n",
+    "\n",
+    "current_player = 1\n",
+    "\n",
+    "def compute_legal_actions(estimated_board):\n",
+    "    legal_actions = []\n",
+    "    \n",
+    "    ####### PLAY ACTIONS ############\n",
+    "\n",
+    "    # create all play actions\n",
+    "    for position in possible_actions_lexicon['card_index']:\n",
+    "        legal_actions.append(create_action_instance(act_type='PLAY', info=None, \n",
+    "                                                        target_offset=None, card_index=position))\n",
+    "    \n",
+    "    ##### DISCARD ACTIONS ############\n",
+    "    \n",
+    "    # discarding a card is not possibly when you have 8 information token\n",
+    "    if estimated_board['information_tokens'] is not 8:\n",
+    "        # create all discard actions\n",
+    "        for position in possible_actions_lexicon['card_index']:\n",
+    "            legal_actions.append(create_action_instance(act_type='DISCARD', info=None, \n",
+    "                                                        target_offset=None, card_index=position))      \n",
+    "    \n",
+    "    ######## HINT ACTIONS ############\n",
+    "    \n",
+    "    # you can only give a hint if there is at least 1 information token\n",
+    "    if estimated_board['information_tokens'] is not 0:\n",
+    "        # create all color hints\n",
+    "        \n",
+    "        # TO DO: option for not allowing null hints?\n",
+    "        # if so: TO DO: seen players loop\n",
+    "        #seen_player = 2\n",
+    "        #if estimated_board['estimated_hands'][seen_player][]\n",
+    "        for offset in possible_actions_lexicon['target_offset']:\n",
+    "            for color in possible_actions_lexicon['color']:\n",
+    "                legal_actions.append(create_action_instance(act_type='REVEAL_COLOR', info=color, \n",
+    "                                                        target_offset=offset, card_index=None))\n",
+    "            \n",
+    "        # create all rank hints\n",
+    "        for offset in possible_actions_lexicon['target_offset']:\n",
+    "            for rank in possible_actions_lexicon['rank']:\n",
+    "                    legal_actions.append(create_action_instance(act_type='REVEAL_RANK', info=rank, \n",
+    "                                                        target_offset=offset, card_index=None))\n",
+    "    return legal_actions\n",
+    "            \n",
+    "print(compute_legal_actions(estimated_board))"
    ]
   },
   {
@@ -362,6 +416,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,21 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Bianca:\n",
-    "# Done: having defined theoretically possible actions (see above)\n",
-    "# TO DO: come up with legal actions for the Pragmatic Speaker from the Pragmatic Listener's point of view"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# legal actions should now be replaced by output of legal_actions(context) I think --> ask Min again\n",
+    "\n",
     "def pragmatic_speaker(intention,context,card_index):\n",
     "    alpha = 1.  # optimality\n",
     "    numerator = np.zeros(len(possible_actions))\n",
