--- a/code/RSA_intention_Plus_Utility.ipynb
+++ b/code/RSA_intention_Plus_Utility.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# list of all available actions\n",
     "\n",
-    "# TO DO: make list of all possible actions compatible to Saskia's utility function\n",
+    "# right now, only color hint actions are included\n",
     "all_actions = [{'action_type': 'REVEAL_COLOR', 'target_offset': 1, 'color': 'R'},\n",
     "              {'action_type': 'REVEAL_COLOR', 'target_offset': 1, 'color': 'B'},\n",
     "              {'action_type': 'REVEAL_COLOR', 'target_offset': 1, 'color': 'G'},\n",
@@ -47,7 +47,7 @@
     "               \n",
     "all_intentions = ['play', 'save', 'discard']\n",
     "\n",
-    "# current situation, taken from Saskia's utility function\n",
+    "# current situation, taken from Saskia's utility script\n",
     "estimated_board = {'life_tokens': 3,\n",
     "                   'information_tokens': 7,\n",
     "                   'fireworks': {'R': 3, 'Y': 2, 'G': 4, 'W': 1, 'B': 2},\n",
@@ -65,14 +65,6 @@
     "                        {'color': 'Y', 'rank': 0}]\n",
     "                    ]\n",
     "                   }\n",
-    "\n",
-    "\n",
-    "# my old abitrary fixed utilities\n",
-    "#utilities = {\n",
-    "#    'to play': {'red': 0.4, 'blue': -3, 'discard': -1},\n",
-    "#    'to save': {'red': 0.9, 'blue': -2, 'discard': -3},\n",
-    "#    'to discard': {'red': -1, 'blue': 0.01, 'discard': 0.9}\n",
-    "#}\n",
     "\n",
     "# assuming flat priors for now\n",
     "priors = {\n",
@@ -121,10 +113,15 @@
    "source": [
     "def prag_speaker(action, estimated_board, intention):\n",
     "    alpha = 1\n",
-    "    softmax_numerator = np.exp(alpha * ut.utility(intention, estimated_board, card))\n",
+    "    # estimated_board has to be the board estimation from 1 step before (so from the speaker's POV)\n",
+    "    # next_estimated_board = next_extimated_board given action \n",
+    "    # TO DO: simulate an action on the current board to get next_estimated_board for action\n",
+    "    # and then all other legal actions respectively for the denominator\n",
+    "    softmax_numerator = np.exp(alpha * ut.utility(intention, next_estimated_board, card))\n",
     "    softmax_denominator = 0\n",
     "    for specific_action in all_actions:\n",
-    "        softmax_denominator += np.exp(alpha * ut.utility(intention, estimated_board, card))\n",
+    "        # loop over all possible actions and compute their utilities\n",
+    "        softmax_denominator += np.exp(alpha * ut.utility(intention, next_estimated_board, card))\n",
     "    return softmax_numerator / softmax_denominator"
    ]
   },
