--- a/code/hanabi_RSA_intention_representation.ipynb
+++ b/code/hanabi_RSA_intention_representation.ipynb
@@ -74,9 +74,7 @@
     "# for every card on the hand of the players (2 player game: 10 cards on hands) there should be a probability\n",
     "# distribution for intention of card (prob for playable, to save, discardable), at the beginning: uniformly\n",
     "# distributed. With every round, the intentions should get updated. This should then serve as priors for the\n",
-    "# next inention update\n",
-    "\n",
-    "# to do: write my own factor() function similar to Pyro / webPPL with numpy\n"
+    "# next inention update"
    ]
   },
   {
@@ -194,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
