more detailed explnation of new update rules

--- a/code/Bayesian update.ipynb
+++ b/code/Bayesian update.ipynb
@@ -1365,10 +1365,11 @@
    "source": [
     "1. Marginalise $P(i_n|a,c) = P(i|a,c) = \\sum_r P(i,r|a,c) = \\sum_r P(i|r,a,c) P(r|a,c)$ <br>\n",
     "$P(r|a,c)$ is already informed by last_action\n",
-    "2. Listener $P(i,r|a,c) = \\dfrac{P(a|i,r,c) P(i,r|c)}{\\sum_{i^*,r^*}P(a|i^*,r^*,c) P(i^*,r^*|c)}  $       ///= P(a|i,r) P(i|r)\n",
-    "Context-dependent prior as Bianca suggested?\n",
+    "2. Listener $P(i|r,a,c) = \\dfrac{P(a|i,r,c) P(i|r,c)}{\\sum_{i^*}P(a|i^*,r,c) P(i^*|r,c)}  $     \n",
     "3. Speaker $P(a|r,i,c) =  \\dfrac{P(i,a|r,c)}{\\sum_{a^*}P(i,a^*|r,c)} =  \\dfrac{P(i|a,r,c) P(a|r,c)}{\\sum_{a^*}P(i|a^*,r,c) P(a^*|r,c)} =  \\dfrac{P(i|r,cN) P(a|r,c)}{\\sum_{a^*}P(i|,r,cN^*) P(a^*|r,c)}$\n",
-    "4. Utility $U(i,r,cN)$"
+    "4. Utility $U(i,r,cN)$\n",
+    "\n",
+    "The problem with this approach is that marginalisation over r happens one level above listener. This causes problem with weighing the right realisation with high weights"
    ]
   },
   {
@@ -1376,9 +1377,29 @@
    "metadata": {},
    "source": [
     "# Real shit\n",
-    "2. Listener $P(i|a,c) = \\dfrac{\\sum_{r}P(a|i,r,c) P(i,r|c)}{\\sum_{i^*,r^*}P(a|i^*,r^*,c) P(i^*,r^*|c)}  $       \n",
-    "3. Speaker $P(a|r,i,c) =  \\dfrac{P(i,a|r,c)}{\\sum_{a^*}P(i,a^*|r,c)} =  \\dfrac{P(i|a,r,c) P(a|r,c)}{\\sum_{a^*}P(i|a^*,r,c) P(a^*|r,c)} =  \\dfrac{P(i|r,cN) P(a|r,c)}{\\sum_{a^*}P(i|,r,cN^*) P(a^*|r,c)} = \\dfrac{\\exp(\\alpha U(i|r,cN)) P(a|r,c)}{\\sum_{a^*}\\exp(\\alpha U(i|r,cN^*)) P(a^*|r,c)}$\n",
-    "4. Utility $U(i,r,cN)$"
+    " \n",
+    "1. Factorize  <br>\n",
+    " $P(i_{\\text{total}}|a,c)  \\stackrel{i.d.}{=}   \\prod_{\\text{card}} P(i_{\\text{card}}|a,c) $\n",
+    "\n",
+    "\n",
+    "2. Listener <br>\n",
+    "$P(i|a,c)  =  \\sum_{r} p(i,r|a,c)  =  \\sum_{r} \\dfrac {P(a|i,r,c) P(i,r|c)} {P(a|c)}  =  \\dfrac {\\sum_{r} P(a|i,r,c) P(i,r|c)} {\\sum_{i^*,r^*} P(a|i^*,r^*,c) P(i^*,r^*|c)}  \\stackrel{?}{=}  \\dfrac {\\sum_{r} P(a|i,r,c) P(i|c)P(r|c)} {\\sum_{i^*,r^*} P(a|i^*,r^*,c) P(i^*|c)P(r^*|c)}$\n",
+    " \n",
+    " + $P(a|i,r,c)$: comes from speaker\n",
+    " + $P(i|c)$: prior as we had beforehand, possibly drop c dependence as well\n",
+    " + $P(r|c)$: compute by fraction of number of instance of the specific realisation\n",
+    " \n",
+    " \n",
+    "3. Speaker  <br>\n",
+    "$P(a|r,i,c)  =  \\dfrac{P(i,a|r,c)}{\\sum_{a^*}P(i,a^*|r,c)}  =  \\dfrac {P(i|a,r,c) P(a|r,c)}{\\sum_{a^*} P(i|a^*,r,c) P(a^*|r,c)}   \\stackrel{(*)}{=}   \\dfrac {P(i|r,c_{\\text{new}}) P(a|r,c)} {\\sum_{a^*} P(i|,r,c_{\\text{new}}^*) P(a^*|r,c)}  =  \\dfrac {\\exp(\\alpha U(i|r,c_{\\text{new}})) P(a|r,c)} {\\sum_{a^*}\\exp(\\alpha U(i|r,c_{\\text{new}}^*)) P(a^*|r,c)}$\n",
+    "\n",
+    " + (*): use update_game() to get new game_state\n",
+    " + $U(i|r,c_{\\text{new}})$: comes from utility\n",
+    " + $P(a|r,c)$ is $0$ when $a$ is not legal and $\\frac{1}{\\text{#.action}}$ when $a$ is legal. Since the term is in both numerator and denominator, simply iterating over legal actions is sufficient.\n",
+    "\n",
+    "\n",
+    "4. Utility <br>\n",
+    "$U(i,r,c_{\\text{new}})$"
    ]
   },
   {
